adds links to beer/show pages from home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,9 @@
     <div class="body">
       <h2>check out a new pour</h2>
       <% for (let beer of beers) { %>
-        <h4> <%= beer.name %> </h4>
+        <h4>
+          <a href=<%= `beers/${beer.db_id}` %>><%=beer.name%></a>
+        </h4>
       <% } %>
     </div>
   </body>
