--- a/views/beers_index.ejs
+++ b/views/beers_index.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <%- include("partials/_head") %>
   </head>
   <body>
-
+    <%- include("partials/_header") %>
     <ul>
       <% for (let beer of beers) { %>
 
