--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,19 +2,11 @@
 <html lang="en">
   <head>
     <title>Home Page</title>
-
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-    <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
-    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <%- include("partials/_head") %>
   </head>
 
   <body>
-    <div class="header">
-      <h1>beer clone &#x1F37A;</h1>
-    </div>
+  <%- include("partials/_header") %>
     <div class="body">
       <h2>check out a new pour</h2>
       <% for (let beer of beers) { %>
