--- a/views/show_beer.ejs
+++ b/views/show_beer.ejs
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <%- include("partials/_head") %>
   </head>
   <body>
+    <%- include("partials/_header") %>
     <ul>
       <li>
         <%= beer['name'] %>
