--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,12 @@
 <div class="header">
-  <h1><a href="/">beer clone &#x1F37B;</a></h1>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="navbar">
+        <h1>
+          <a href="/">beer clone &#x1F37B;</a>
+        </h1>
+        <span>about | beer | your profile</span>
+      </div>
+    </div>
+  </div>
 </div>
