fixes bootstrap columns

--- a/views/beers_index.ejs
+++ b/views/beers_index.ejs
@@ -5,25 +5,30 @@
   </head>
   <body>
     <%- include("partials/_header") %>
-    <ul>
-      <% for (let beer of beers) { %>
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <ul>
+            <% for (let beer of beers) { %>
+            
+            <li>
+              <a href=<%= `/beers/${beer.db_id}` %>><%= beer['name'] %></a>
+              <br>
+              Rating: <%= beer['rating'] %>
+              <br>
+              <%= beer['brewery'] %>
+              <br>
+              <%= beer['style'] %>
+              <br>
+              ABV: <%= beer['ABV'] %>
+              <br>
+              <%= beer['description'] %>
+            </li>
 
-      <li>
-        <a href=<%= `/beers/${beer.db_id}` %>><%= beer['name'] %></a>
-        <br>
-        Rating: <%= beer['rating'] %>
-        <br>
-        <%= beer['brewery'] %>
-        <br>
-        <%= beer['style'] %>
-        <br>
-        ABV: <%= beer['ABV'] %>
-        <br>
-        <%= beer['description'] %>
-      </li>
-
-      <% } %>
-    </ul>
-
+            <% } %>
+          </ul>
+        </div>
+      <div class="col-md-2"></div>
+    </div>
   </body>
 </html>
